<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fabricor</groupId>
  <artifactId>fabricor</artifactId>
  <version>0.0.1-${export.name}</version>
  <packaging>jar</packaging>

  <name>fabricor</name>
  <url>http://maven.apache.org</url>

  <properties>
    
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <lwjgl.version>3.2.1</lwjgl.version>
    
  </properties>
  
  <profiles>
		<profile>
			<id>lwjgl-natives-linux</id>
			<activation>
				<os><family>unix</family></os>
			</activation>
			<properties>
				<lwjgl.natives>natives-linux</lwjgl.natives>
				<lwjgl.natives.vulkan></lwjgl.natives.vulkan>
				<export.name>Linux</export.name>
			</properties>
		</profile>
		<profile>
			<id>lwjgl-natives-macos</id>
			<activation>
				<os><family>mac</family></os>
			</activation>
			<properties>
				<lwjgl.natives>natives-macos</lwjgl.natives>
				<lwjgl.natives.vulkan>natives-macos</lwjgl.natives.vulkan>
				<export.name>Mac</export.name>
			</properties>
		</profile>
		<profile>
			<id>lwjgl-natives-windows</id>
			<activation>
				<os><family>windows</family></os>
			</activation>
			<properties>
				<lwjgl.natives>natives-windows</lwjgl.natives>
				<lwjgl.natives.vulkan></lwjgl.natives.vulkan>
				<export.name>Windows</export.name>
			</properties>
		</profile>
	</profiles>
  
  <build>
  	<plugins>
  		<plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <configuration>
        <archive>
          <manifest>
            <mainClass>fabricor.main.Main</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
      </configuration>
    </plugin>
  	</plugins>
  	
  	<resources>
        <resource>
            <directory>src/Shaders</directory>
            <includes>
                <include>**/*.spv</include>
            </includes>
        </resource>
    </resources>
  </build>
  
  

  <dependencies>
  	
  	<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-assimp</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.joml</groupId>
			<artifactId>joml</artifactId>
			<version>1.9.14</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-openal</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-stb</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-vma</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-vulkan</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-assimp</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-openal</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-stb</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-vma</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>${lwjgl.natives}</classifier>
		</dependency>
  </dependencies>


</project>


